# slezhka-startup

./: .gitignore  MANIFEST.in  README.md  emo_classifier.py  gaze_estimation.py  mobilegays.ipynb  pyproject.toml  requirments.txt  stat.ipynb
examples/code/: demo-stats.py
source/: __init__.py  emo_classifier.py  gaze_estimation.py
source/stats/: collector.py  datamodel.py  metrics.py  realtime.py
source/utils/: helpers.py
source/weights/: yolov8face.pt
