[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slezhka_startup"
version = "0.1.1"
description = "Emo radar reklama edition"
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
  { name = "Команда emo_radar", email = "buklinfur@outlook.com" }
]
license = "MIT"

dependencies = [
  "opencv-python",
  "torch",
  "torchvision",
  "numpy",
  "ultralytics",
  "ipywidgets",
  "tqdm",
  "deepface",
  "tensorflow>=2.12.0"
]

[project.optional-dependencies]

full = [
  "opencv-python",
  "torch",
  "torchvision",
  "numpy",
  "ultralytics",
  "ipywidgets",
  "tqdm",
  "deepface",
  "tensorflow>=2.12.0",
  "streamlit",
  "pytest",
  "black",
  "ruff",
  "isort"
]

minimal = [
  "opencv-python",
  "numpy",
  "tqdm"
]

[project.urls]
"Repository" = "https://github.com/buklinfur/slezhka-startup"
"Tracker" = "https://github.com/buklinfur/slezhka-startup/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["source*"]

[tool.setuptools.package-data]
"source" = ["weights/*"]

[tool.setuptools]
include-package-data = true